<resources>
    <!-- Details -->
    <string name="app_name">SriCast</string>
    <string name="app_slogan">Where Srilanka Speaks</string>

    <!-- Text -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="reporter">Reporter</string>
    <string name="editor">Editor</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>